--- a/Ghak.libraries.AppBase/Ghak.libraries.AppBase.csproj
+++ b/Ghak.libraries.AppBase/Ghak.libraries.AppBase.csproj
@@ -13,6 +13,7 @@
 		<Description>Common class for build ASP .NET CORE API</Description>
 		<RepositoryUrl>https://github.com/gheith3/Ghak.libraries/tree/master/Ghak.libraries.AppBase</RepositoryUrl>
 		<Title>App Base</Title>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
 	</PropertyGroup>
 
 
@@ -21,6 +22,14 @@
 		<PackageReference Include="Microsoft.OpenApi" Version="1.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.2.24" />
+	</ItemGroup>
+
+
+	<ItemGroup>
+	  <None Update="README.md">
+	    <Pack>True</Pack>
+	    <PackagePath>\</PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
