--- a/Ghak.libraries.AppBase/Ghak.libraries.AppBase.csproj
+++ b/Ghak.libraries.AppBase/Ghak.libraries.AppBase.csproj
@@ -19,7 +19,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0-rc.1.23419.6" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-rc.1.23419.4" />
 		<PackageReference Include="Microsoft.OpenApi" Version="1.6.9" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0-rc.1.23421.29" />
@@ -35,6 +37,8 @@
 	    <PackagePath>\</PackagePath>
 	  </None>
 	</ItemGroup>
+
+
 
 
 
