--- a/Ghak.libraries.AppBase/Ghak.libraries.AppBase.csproj
+++ b/Ghak.libraries.AppBase/Ghak.libraries.AppBase.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<AnalysisLevel>none</AnalysisLevel>
-		<Version>2.0.3</Version>
+		<Version>2.0.4</Version>
 		<Authors>Gheith Alrawahi</Authors>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>Ghak.libraries.AppBase</PackageId>
@@ -23,6 +23,7 @@
 		<PackageReference Include="Microsoft.OpenApi" Version="1.6.9" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
 		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.5" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0-rc.2.23480.2" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0-rc.2.23479.6" />
