--- a/Ghak.libraries.AppBase/Ghak.libraries.AppBase.csproj
+++ b/Ghak.libraries.AppBase/Ghak.libraries.AppBase.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<AnalysisLevel>none</AnalysisLevel>
-		<Version>2.0.12</Version>
+		<Version>2.0.13</Version>
 		<Authors>Gheith Alrawahi</Authors>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<PackageId>Ghak.libraries.AppBase</PackageId>
@@ -19,17 +19,18 @@
 
 	<ItemGroup>
 		<PackageReference Include="Humanizer" Version="2.14.1" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
-		<PackageReference Include="Microsoft.OpenApi" Version="1.6.11" />
-		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
-		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
-		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.7" />
-		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.0" />
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.0.3" />
-		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.0.3" />
+		<PackageReference Include="Microsoft.OpenApi" Version="1.6.15" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.6.2" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.6.2" />
+		<PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.6.2" />
+		<PackageReference Include="System.Linq.Dynamic.Core" Version="1.4.3" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.7" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.1" />
+		<PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.6.3" />
+		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="7.6.3" />
+		<PackageReference Include="Ulid" Version="1.3.3" />
 	</ItemGroup>
 
 
